<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="false"
        android:orientation="vertical">

        <TextView
            android:id="@+id/t_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_lugar" />

        <EditText

            android:id="@+id/nombre"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t_nombre"
            android:autofillHints=""
            android:hint="@string/nombre_pista"
            android:inputType="textPersonName">
            <requestFocus/>
             </EditText>
        
        <TextView
            android:id="@+id/t_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nombre"
            android:text="@string/tipo_lugar" />

        <Spinner
            android:id="@+id/tipo"
            android:layout_width="254dp"
            android:layout_height="55dp"
            android:layout_below="@id/t_tipo" />

        <TextView
            android:id="@+id/t_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tipo"
            android:text="@string/direccion_lugar" />

        <EditText
            android:id="@+id/direccion"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_direccion"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/direccion_pista"
            android:inputType="textPostalAddress" />

        <TextView
            android:id="@+id/t_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/direccion"
            android:text="@string/telefono_lugar" />

        <EditText
            android:id="@+id/telefono"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_telefono"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/telefono_pista"
            android:inputType="phone" />

        <TextView
            android:id="@+id/t_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/telefono"
            android:text="@string/url_lugar" />

        <EditText
            android:id="@+id/url"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_url"
            android:ems="10"
            android:hint="@string/url_pista"
            android:inputType="textUri"
            android:autofillHints="" />

        <TextView
            android:id="@+id/t_comentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/url"
            android:text="@string/comentario_lugar" />

        <EditText
            android:id="@+id/comentario"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_comentario"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/comentario_pista"
            android:inputType="textMultiLine"
            android:autofillHints="" />
    </RelativeLayout>
</ScrollView>