<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentacion.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/accion_preferencias"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="5"
        app:showAsAction="never"/>
    <item
        android:id="@+id/acercaDe"
        android:title="@string/accion_acerca_de"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="10"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_buscar"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="15"
        android:title="@string/tool_buscar"
        app:showAsAction="always|collapseActionView" />

</menu>